refactor(web): 代码优化